Thu Sep 19 16:53:26 2002  Jarkko Hietaniemi  <jhi@iki.fi>

	* Patch from Miles Egan to use -I$archlib/CORE instead
	  of -I$installarchlib/CORE in Makefile.PL, since they
	  might be different but the first one is the one apps
	  are supposed to be using.

	* Sanity check for getrlimit/setrlimit/getpriority/setpriority
	  so that one won't use the string "RLIMIT_..."/"PRIO_..." when
	  one is supposed to be using the constant RLIMIT_.../PRIO_...

	* Release 1.17.

Sun Sep 15 18:44:36 2002  Jarkko Hietaniemi  <jhi@iki.fi>

	* Patch from Allen Smith to avoid -lbsd in IRIX
	  since it potentially brings in harmful side effects
	  regarding setpgrp/setgroups.
		
	* Mention the use of VERBOSE in the probe failure message.
		
	* Release 1.16.

Thu May  9 04:18:09 2002  Jarkko Hietaniemi  <jhi@iki.fi>

	* Add COPYRIGHT AND LICENSE to Resource.pm.

	* Release 1.15.

Sat Jan 26 07:14:00 2002  Jarkko Hietaniemi  <jhi@iki.fi>

	* A space between the 2>/dev/null and the command is nice.

	* Release 1.14.

Tue Jan 22 16:55:44 2002  Jarkko Hietaniemi  <jhi@iki.fi>

	* Alex J Avriette reported that in Darwin 5.2 the Makefile.PL
	  dies with great noise.  Simplify the resource header scan.
	
	* Release 1.13.

Wed Jan 16 02:38:54 2002  Jarkko Hietaniemi  <jhi@iki.fi>

	* Release 1.12.

	* Allen Smith had a compiler setup in IRIX 6.5 that made
	  Makefile.PL wrongly think that there be no <sys/resource.h>
	  ($ENV{CC} set to "cc -...", which made the basename() logic fail)

Fri Sep 28 05:35:16 2001  Jarkko Hietaniemi  <jhi@iki.fi>

	* Release 1.11.

	* I suck.  Vivek Khera reported NINE MONTHS ago that
	  I was missing sub isrss().  My memory was jogged by
	  a message from Jeff Boes ONE MONTH ago.  My apologies.

Mon Mar  5 16:43:44 2001  Jarkko Hietaniemi  <jhi@alpha.hut.fi>

	* Release 1.10.

	* Move $VERSION from Makefile.PL to Resource.pm as suggested
	  by Philip Newton.

	* Require at least Perl 5.002.

Mon Oct 30 22:39:40 2000  Jarkko Hietaniemi  <jhi@iki.fi>
