@@ -1,5 +1,5 @@
 #
-# Copyright (c) 1995-9,2001 Jarkko Hietaniemi. All rights reserved.
+# Copyright (c) 1995-2002 Jarkko Hietaniemi. All rights reserved.
 # This program is free software; you can redistribute it and/or
 # modify it under the same terms as Perl itself.
 #
@@ -13,7 +13,7 @@ package BSD::Resource;
 use strict;
 use vars qw(@ISA @EXPORT @EXPORT_OK $AUTOLOAD $VERSION);
 
-$VERSION = '1.17';
+$VERSION = '1.18';
 
 use Carp;
 use AutoLoader;
